--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^5.2.1",
     "react-query": "^3.34.16",
+    "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
